updated width issues on mobile screens

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -100,7 +100,7 @@ p {
   z-index: 0;
   height: 100%;
   width: 100%;
-  min-width: 1440px;
+  /* min-width: 1440px; */
   top: 0px;
   bottom: 0px;
   mix-blend-mode: multiply;
@@ -135,6 +135,13 @@ p {
   .aboutHeart {
     width: 180px;
     bottom: 260px;
-    right: -30px;
+    right: 0px;
+    position: absolute;
+  }
+}
+
+@media (max-width: 450px) {
+  .aboutHeart {
+    right: 0;
   }
 }
