--- a/src/components/CTA/CTA.module.css
+++ b/src/components/CTA/CTA.module.css
@@ -60,7 +60,8 @@
 }
 
 .arrowTop,
-.scribble, .footerUnderline {
+.scribble,
+.footerUnderline {
   position: absolute;
 }
 
